src/test/ui/impl-trait/does-not-live-long-enough.stderr
error[E0373]: closure may outlive the current function, but it borrows `prefix`, which is owned by the current function
  --> $DIR/does-not-live-long-enough.rs:6:33
   |
LL |         self.data.iter().filter(|s| s.starts_with(prefix)).map(|s| s.as_ref())
   |                                 ^^^               ------ `prefix` is borrowed here
   |                                 |
   |                                 may outlive borrowed value `prefix`
   |
note: closure is returned here
  --> $DIR/does-not-live-long-enough.rs:6:9
   |
LL |         self.data.iter().filter(|s| s.starts_with(prefix)).map(|s| s.as_ref())
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: to force the closure to take ownership of `prefix` (and any other referenced variables), use the `move` keyword
   |
LL |         self.data.iter().filter(move |s| s.starts_with(prefix)).map(|s| s.as_ref())
   |                                 ++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0373`.
